# oglpp

./: .gitmodules  cmakelists.txt  main.cc  ogl.hpp  readme.md
example/: CMakeLists.txt  example.cc
example/glad/include/glad/: glad.h
example/glad/src/: glad.c
